Corrections on typos

--- a/terraform/100-net-fw-dnat/terraform.tfvars.example
+++ b/terraform/100-net-fw-dnat/terraform.tfvars.example
@@ -27,6 +27,6 @@ network_type = "org"
 dnat_description = "tinkernet1 - allow SSH access"
 dnat_orig_addr = "211.45.23.12"     # External public IP address of Edge Gateway
 dnat_orig_port = 22
-dnat_trans_addr = 192.168.1.12      # IP address of internal virtual machine
+dnat_trans_addr = "192.168.1.12"      # IP address of internal virtual machine
 dnat_trans_port = 22
 dnat_protocol = tcp
