--- a/terraform/100-edge-dnat/terraform.tfvars.example
+++ b/terraform/100-edge-dnat/terraform.tfvars.example
@@ -1,8 +1,8 @@
 /* 
 -------------------------------------------------------------------------------------------
-Name: 100-net-fw-dnat - example
+Name: 100-edge-dnat - example
 
-Description:  Setup of a firewall destination NAT for internal (on an Edge Gateway in 
+Description:  Setup of a Destination NAT rule on an Edge Gateway in 
               Datacom Cloud FlexCompute
 
 Dependencies: Existing Org, VDC and Edge Gateway
@@ -22,8 +22,8 @@ vcd_vdc = "tinkvdc"
 network_edge_gateway_name = "tinkeredge1"
 
 # Destination NAT Rule
-network_name = "tinkernet1"
-network_type = "org"
+dnat_incoming_net_name = "tinkeredge1"
+dnat_incoming_net_type = "org"
 dnat_description = "tinkernet1 - allow SSH access"
 dnat_orig_addr = "211.45.23.12"     # External public IP address of Edge Gateway
 dnat_orig_port = 22
