--- a/terraform/100-edge-fw-ipaddrs/terraform.tfvars.example
+++ b/terraform/100-edge-fw-ipaddrs/terraform.tfvars.example
@@ -1,6 +1,6 @@
 /* 
 -------------------------------------------------------------------------------------------
-Name: 100-net-fw-rule-ipaddrs - example
+Name: 100-edge-fw-ipaddrs - example
 
 Description:  Setup of a firewall rule with ip addresses on an Edge Gateway in 
               Datacom Cloud FlexCompute
