--- a/terraform/100-vm-linux-cloud-init/cloud-config.yaml
+++ b/terraform/100-vm-linux-cloud-init/cloud-config.yaml
@@ -6,6 +6,7 @@ users:
    sudo: ["ALL=(ALL) NOPASSWD:ALL"]
    groups: [sudo]
    shell: /bin/bash
-   passwd: ${passwd}
+   ssh_authorized_keys:
+    - ${sshauthorizedkey}
 manage_resolv_conf: true
 final_message: "The system is ready and prepped (took $UPTIME seconds)"
