Try hard coding

--- a/terraform/100-vm-linux-cloud-init/cloud-config.yaml
+++ b/terraform/100-vm-linux-cloud-init/cloud-config.yaml
@@ -1,8 +1,8 @@
 #cloud-config
 
-hostname: ${hostname}
+hostname: mustwork
 users:
- - name: $(localadmin)
+ - name: ubuntu
    sudo: ["ALL=(ALL) NOPASSWD:ALL"]
    groups: [sudo]
    shell: /bin/bash
