fixed up cloud-config with hostname variable

--- a/terraform/100-vm-linux-cloud-init/cloud-config.yaml
+++ b/terraform/100-vm-linux-cloud-init/cloud-config.yaml
@@ -2,7 +2,7 @@
 
 hostname: mustwork
 users:
- - name: ubuntu
+ - name: ${hostname}
    sudo: ["ALL=(ALL) NOPASSWD:ALL"]
    groups: [sudo]
    shell: /bin/bash
