Reverted to variable for local admin name

--- a/terraform/100-vm-linux-cloud-init/cloud-config.yaml
+++ b/terraform/100-vm-linux-cloud-init/cloud-config.yaml
@@ -2,7 +2,7 @@
 
 hostname: ${hostname}
 users:
- - name: ubuntu
+ - name: ${localadmin}
    sudo: ["ALL=(ALL) NOPASSWD:ALL"]
    groups: [sudo]
    shell: /bin/bash
