--- a/terraform/300-k8s-cluster-basic/vm-bastion/cloud-config.yaml
+++ b/terraform/300-k8s-cluster-basic/vm-bastion/cloud-config.yaml
@@ -9,4 +9,6 @@ users:
    ssh_authorized_keys:
     - ${sshauthorizedkey}
 manage_resolv_conf: true
+runcmd:
+ - echo ${remotesshauthorizedkey} > /home/${localadmin}/.ssh/id_rsa
 final_message: "The system is ready and prepped (took $UPTIME seconds)"
