Removed carriage return on private key passthrough

--- a/terraform/300-k8s-cluster-basic/vm-bastion/cloud-config.yaml
+++ b/terraform/300-k8s-cluster-basic/vm-bastion/cloud-config.yaml
@@ -10,5 +10,5 @@ users:
     - ${sshauthorizedkey}
 manage_resolv_conf: true
 runcmd:
- - echo ${remotesshauthorizedkey} > /home/${localadmin}/.ssh/id_rsa
+ - echo "${remotesshauthorizedkey}"" > /home/${localadmin}/.ssh/id_rsa
 final_message: "The system is ready and prepped (took $UPTIME seconds)"
