--- a/terraform/300-k8s-cluster-basic/vm-bastion/cloud-config.yaml
+++ b/terraform/300-k8s-cluster-basic/vm-bastion/cloud-config.yaml
@@ -9,6 +9,10 @@ users:
    ssh_authorized_keys:
     - ${sshauthorizedkey}
 manage_resolv_conf: true
-runcmd:
- - echo "${remotesshauthorizedkey}"" > /home/${localadmin}/.ssh/id_rsa
+write_files:
+- encoding: text/plain
+  content: '${remotesshauthorizedkey}'
+  owner: ubuntu:ubuntu
+  path: /home/${localadmin}/.ssh/id_rsa
+  permissions: '0500'
 final_message: "The system is ready and prepped (took $UPTIME seconds)"
