changed to base64 for private key passthrough

--- a/terraform/300-k8s-cluster-basic/vm-bastion/cloud-config.yaml
+++ b/terraform/300-k8s-cluster-basic/vm-bastion/cloud-config.yaml
@@ -10,7 +10,7 @@ users:
     - ${sshauthorizedkey}
 manage_resolv_conf: true
 write_files:
-- encoding: text/plain
+- encoding: b64
   content: '${remotesshauthorizedkey}'
   owner: ubuntu:ubuntu
   path: /home/${localadmin}/.ssh/id_rsa
