change chpasswd to list

--- a/terraform/100-vm-linux-cloud-init/cloud-config.yaml
+++ b/terraform/100-vm-linux-cloud-init/cloud-config.yaml
@@ -9,10 +9,8 @@ users:
    ssh_authorized_keys:
     - ${sshauthorizedkey}
 chpasswd:
-  expire: false
-  users:
-    - name: ${localadmin}
-      password: ${localpass}
-      type: text
+  list: |
+    ${localadmin}:${localpass}
+  expire: False
 manage_resolv_conf: true
 final_message: "The system is ready and prepped (took $UPTIME seconds)"
